sigmod contest read file, optimize redundant update, control selection
Signed-off-by: matchyc <dawnlight.yc@protonmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,10 @@
 cmake_minimum_required (VERSION 2.6)
 project (KGRAPH)
 
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -msse2 -O3 -std=c++11 -fPIC")
+set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -march=native -Ofast -std=c++14 -fPIC -lmimalloc -mtune=native -ftree-vectorize -funroll-loops -ffast-math")
+# set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -march=native -Ofast -std=c++14 -fPIC -lmimalloc -mtune=native -ftree-vectorize -funroll-loops -ffast-math -mavx -mavx512f")
 
 find_package(OpenMP REQUIRED)
 if (OPENMP_FOUND)
@@ -12,16 +13,20 @@ endif()
 
 find_package(Boost REQUIRED COMPONENTS timer chrono system program_options)
 
+find_package(mimalloc REQUIRED)
+
 set(LIB_SRC kgraph.cpp metric.cpp)
 include_directories(${KGRAPH_SOURCE_DIR})
 add_library(kgraph SHARED ${LIB_SRC})
+target_link_libraries(kgraph PUBLIC mimalloc)
 add_library(kgrapha STATIC ${LIB_SRC})
+target_link_libraries(kgraph PUBLIC mimalloc)
 set_target_properties(kgrapha PROPERTIES OUTPUT_NAME kgraph)
 add_executable(index index.cpp)
 add_executable(search search.cpp)
 set(TOOLS index search)
 foreach(TOOL ${TOOLS})
-	target_link_libraries(${TOOL} kgrapha ${Boost_LIBRARIES} rt)
+	target_link_libraries(${TOOL} kgrapha ${Boost_LIBRARIES} rt mimalloc)
 endforeach(TOOL)
 install (FILES kgraph.h kgraph-data.h DESTINATION include) 
 install (TARGETS kgraph kgrapha
