using prefetch in a appropriate way, re-implement avx2, implement avx512, speed up calculation
Signed-off-by: matchyc <dawnlight.yc@protonmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,12 @@
 
 cmake_minimum_required (VERSION 3.12)
-set(CMAKE_CXX_COMPILER /usr/bin/g++-9)
+# set(CMAKE_CXX_COMPILER /usr/bin/g++-9)
 project (KGRAPH)
 
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -march=native -Ofast -std=c++14 -fPIC -lmimalloc -mtune=native -ftree-vectorize -funroll-loops -ffast-math")
+set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native -Ofast -std=c++14 -fPIC -lmimalloc -mtune=native -ftree-vectorize -funroll-loops -ffast-math -mavx -mavx512f -mavx512vl")
+# set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=skylake -Ofast -std=c++14 -fPIC -lmimalloc -mtune=skylake -ftree-vectorize -funroll-loops -ffast-math -mavx -mavx512f -mavx512vl")
 # set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -march=native -Ofast -std=c++14 -fPIC -lmimalloc -mtune=native -ftree-vectorize -funroll-loops -ffast-math -mavx -mavx512f")
 
 find_package(OpenMP REQUIRED)
@@ -25,12 +26,15 @@ add_library(kgrapha STATIC ${LIB_SRC})
 target_link_libraries(kgraph PUBLIC mimalloc)
 set_target_properties(kgrapha PROPERTIES OUTPUT_NAME kgraph)
 add_executable(index index.cpp)
-add_executable(search search.cpp)
-set(TOOLS index search)
+# add_executable(search search.cpp)
+# set(TOOLS index search)
+set(TOOLS index)
 foreach(TOOL ${TOOLS})
 	target_link_libraries(${TOOL} kgrapha ${Boost_LIBRARIES} rt mimalloc)
 endforeach(TOOL)
 install (FILES kgraph.h kgraph-data.h DESTINATION include) 
-install (TARGETS kgraph kgrapha
+install (TARGETS 
+kgraph 
+kgrapha
 	 LIBRARY DESTINATION lib
 	 ARCHIVE DESTINATION lib)
